# data-engineering-with-dbt-linkedin-learning

./: .gitignore  README.md  pyproject.toml
nyc_parking_violations/models/example/: ref_model.sql
scripts/: 2024-03-07_gsg_Creating_database.ipynb
